# IM-Server

./: .gitattributes  README.md  项目文档.md
client/chat/: .qmake.stash  aimessagewidget.cpp  aimessagewidget.h  applyfriend.cpp  authenfriend.cpp  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatpage.cpp  chatpage.h  global.h  logindialog.cpp  mainwindow.cpp  mainwindow.h  rc.qrc  resource.rc  singleton.h  tcpmgr.h  ui_chatdialog.h  ui_mainwindow.h  wechat.pro
client/chat/style/: stylesheet.qss
server/: run.sh
server/ChatServer/: CMakeLists.txt  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.h  LogicSystem.cpp  MysqlDao.h  Singleton.h  StatusGrpcClient.cpp  UserMgr.cpp  UserMgr.h  config.ini  data.h  message.pb.cc
server/ChatServer2/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  ChatGrpcClient.cpp  ChatServer.cpp  ChatServiceImpl.cpp  ChatServiceImpl.h  LogicSystem.h  MsgNode.cpp  MsgNode.h  MysqlDao.cpp  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.h  config.ini  const.h
server/GateServer/: AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.h  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h
server/Run/: start.sh
server/StatusServer/: CMakeLists.txt  ChatGrpcClient.cpp  ChatGrpcClient.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.h  Singleton.h  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h  message.pb.h  message.proto
server/VarifyServer/: config.js  config.json  const.js  package-lock.json  package.json  redis.js  server.js
